jsはコメントアウトしています

--- a/css/style.css
+++ b/css/style.css
@@ -528,3 +528,141 @@ html { font-size:62.5%}
  
 }
 /* ------about_us ここまで----- */
+/* ------hagakureここから----- */
+.windy_contine_yhikaru{
+    position: relative; 
+    z-index: 10;
+    max-height: 286px; 
+    min-height: 286px;
+    max-width: 2200px;
+}
+.particles-js{
+    position: absolute; 
+    z-index: -1;
+}
+.hagakure-containe_yhikaru {
+    /* position: absolute;  */
+    z-index: -1; 
+    background-color:#F9CCD2;
+    display: flex;
+    max-height: 286px; 
+    min-height: 286px;
+}
+.hagakure-containe_yhikaru img {
+    width: 100%;
+}
+.hagakure_samurai_1_yhikaru  {
+    position: absolute; 
+    width: 320px;
+    left:8%;
+    margin-top:20px;
+    transform: rotateZ(-10deg);
+}
+.hagakure_topicon_yhikaru {
+    width: 120px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.hagakure-inner_yhikaru h3 {
+    font-size:2.8rem;
+    text-align:center;
+    margin-top: -15px;
+}
+.hagakure-inner_yhikaru  {
+    width: 100%;
+    text-align:center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.hagakure-summary_yhikaru  {
+    margin-top: 10px;
+    max-width: 35%;
+    font-size:1.8rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+.hagakure_samurai_2_yhikaru {
+    position: absolute; 
+    width: 320px;
+    right:8%;
+    margin-top:20px;
+    transform: rotateZ(15deg);
+}
+@media screen and (max-width: 1440px) {
+    .hagakure_samurai_1_yhikaru {
+    position: absolute; 
+    width: 270px;
+    left:50px;
+    margin-top:35px;
+    transform: rotateZ(-10deg);
+    }
+    .hagakure-summary_yhikaru  {
+    margin-top: 12px;
+    max-width: 40%;
+    font-size:1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:left;
+    }
+    .hagakure_samurai_2_yhikaru {
+    position: absolute; 
+    width: 270px;
+    right:50px;
+    margin-top:35px;
+    transform: rotateZ(20deg);
+    }
+}
+@media screen and (max-width: 1028px) {
+    .hagakure_samurai_1_yhikaru {
+    position: absolute; 
+    width: 240px;
+    left:-20px;
+    margin-top:45px;
+    transform: rotateZ(-10deg);
+    }
+    .hagakure-summary_yhikaru  {
+    margin-top: 12px;
+    max-width: 40%;
+    font-size:1.2rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:left;
+    }
+    .hagakure_samurai_2_yhikaru {
+    position: absolute; 
+    width: 240px;
+    right:-20px;
+    margin-top:45px;
+    transform: rotateZ(20deg);
+    }
+}
+@media screen and (max-width: 600px) {
+    .windy_contine_yhikaru {
+    position: relative; 
+    min-width: 375px;
+    height: auto;
+    }
+    .hagakure_samurai_1_yhikaru {
+    display: none;
+    }
+    .hagakure_topicon_yhikaru {
+    width: 22%;
+    margin-top: 10px;
+    }
+    .hagakure-inner_yhikaru {
+    margin-top:5px;
+    width: 100%;
+    font-size: 0.8rem;
+    }
+    .hagakure-summary_yhikaru {
+    max-width: 72%;
+    margin-top: 10px;
+    font-size: 1.3rem;
+    }
+    .hagakure_samurai_2_yhikaru {
+    display: none;
+    }
+}
+/* ------hagakureここまで---- */
