--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 .wrapper_itaru{
     max-width:2200px;
+    min-width: 375px;
     margin: 0 auto;
 }
 body {
@@ -64,9 +65,11 @@ body {
 }
 @media (max-width:520px){
     .navbar{
+        min-width: 375px;
         height:35px;
     }
     .navbar_back_itaru{
+        min-width: 375px;
         height:35px;
     }
     .logo_itaru{
@@ -564,9 +567,10 @@ html { font-size:62.5%}
     margin-right: auto;
 }
 .hagakure-inner_yhikaru h1 {
-    font-size:2.8rem;
+    font-size:2.4rem;
     text-align:center;
     margin-top: -30px;
+    margin-bottom: 15px
 }
 .hagakure-inner_yhikaru  {
     width: 100%;
@@ -578,7 +582,8 @@ html { font-size:62.5%}
     margin-top: px;
     margin-top: 20px;
     max-width: 35%;
-    font-size:1.6rem;
+    font-size:1.2rem;
+    line-height: 1.7;
     margin-left: auto;
     margin-right: auto;
     text-align: left;
@@ -601,7 +606,7 @@ html { font-size:62.5%}
     .hagakure-summary_yhikaru  {
     margin-top: 12px;
     max-width: 40%;
-    font-size:1.5rem;
+    font-size:1.2rem;
     margin-left: auto;
     margin-right: auto;
     text-align:left;
@@ -664,7 +669,7 @@ html { font-size:62.5%}
     .hagakure-summary_yhikaru {
     max-width: 72%;
     margin-top: 20px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     }
     .hagakure_samurai_2_yhikaru {
     display: none;
