--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     height:57px;
     max-width:2200px;
     position:relative;
-    display: table;
+    display: flex;
     background-color:rgba(255, 255, 255, 0.5);
     z-index:2;
 }
@@ -79,9 +79,10 @@ body {
         height:15px;
     }
     .contact_text_itaru{
-      padding-top:5px;
-      font-size:10px;
+        padding-top:5px;
+        font-size:10px;
     }
+
 }
 
 
@@ -682,7 +683,8 @@ html { font-size:62.5%}
   background-repeat: repeat;
   background-size:  1100px auto;
   width: 100%;
-  height: 900px;
+　min-width: 375px;
+  height: 650px;
   display: flex;
   flex-direction: row;
   justify-content: center;
