--- a/static/style.css
+++ b/static/style.css
@@ -37,6 +37,7 @@ body {
     position:relative;
     padding-left:8px;
 }
+
 .DivLink_itaru .Link_itaru{
     display: block;
     position: absolute;
@@ -79,7 +80,7 @@ body {
         height:15px;
     }
     .contact_text_itaru{
-        padding-top:5px;
+        padding-top:0px;
         font-size:10px;
     }
 
@@ -103,7 +104,7 @@ body {
 }
 .main_title_1_itaru{
     color:#595757;
-    padding-top:20px;
+    padding-top:40px;
     font-weight:300;
     font-size:28px;
     letter-spacing:22px;
@@ -207,7 +208,7 @@ body {
     max-width:318px;
     }
     .main_title_1_itaru{
-        padding-top:10px;
+        padding-top:18px;
         font-size:26px;
         margin-left:8px;
     }
@@ -234,6 +235,7 @@ body {
     padding-left:8px;
     }
     .main_title_1_itaru{
+        padding-top:10px;
         margin:  0 auto;
         font-size:12px;
         letter-spacing:15px;
@@ -241,7 +243,7 @@ body {
     }
     .main_title_2_itaru{
         font-size:14px;
-        padding:8px 0 10px 0;
+        padding:8px 0 6px 0;
     }
     /*ダイヤモンドと横棒のブロック*/
     .main_title_daiya_block_itaru{
@@ -271,7 +273,7 @@ body {
     color:#595757;
     padding-top:0.5rem;
     margin-bottom:0px;
-    font-size:10px;
+    font-size:16px;
     -webkit-transform:scale(0.5);
     -moz-transform:scale(0.5);
     -ms-transform:scale(0.5);
@@ -403,7 +405,7 @@ html { font-size:62.5%}
 }
 
 .about_us_morita {
-  background-image: url(../images/background_image.jpg);
+  background-image: url(images/background_image.jpg);
   background-repeat: repeat;
   background-size:  2200px auto;
   width: 100%;
@@ -679,7 +681,7 @@ html { font-size:62.5%}
 /* ------hagakureここまで---- */
 
 .container_sns_fumoto{
-  background-image: url(../images/background_image.jpg);
+  background-image: url(images/background_image.jpg);
   background-repeat: repeat;
   background-size:  1100px auto;
   width: 100%;
