--- a/static/style.css
+++ b/static/style.css
@@ -374,14 +374,14 @@ body {
         }
     .footer p{
     padding-top: 2vw;
-    font-size:1vw;
+    font-size:max(1vw,10px);
     }
 }
 
 /* -----aoubt_us ここから----- */
 html { font-size:62.5%}
 
-.about_us_morita h3 {
+.about_us_morita h1 {
   font-size: 2.4rem;
   font-weight: normal;
 }
@@ -745,6 +745,7 @@ html { font-size:62.5%}
    font-weight: normal;
    text-align: center;
    max-width: 500px;
+   margin-bottom:15px;
 }
 
 
@@ -797,7 +798,7 @@ html { font-size:62.5%}
       height: auto;
       margin: 0px 0px 0px 20%;
     }
-
+}
     @media(max-width:1100px){
       .cloud_fumoto {
         position: absolute;
@@ -819,7 +820,7 @@ html { font-size:62.5%}
         margin: 0px 0px 0px 0px;
       }
 
-
+}
 @media(max-width:840px){
   .cloud_fumoto {
     display: none;
@@ -832,3 +833,100 @@ html { font-size:62.5%}
   }
 }
 
+/* -----dojo ここから----- */
+.dojo h1 {
+  font-size: 2.4rem;
+  font-weight: normal;
+}
+
+.dojo p {
+  font-size: 1.2rem;
+  line-height: 1.7;
+  margin: 1.2rem 0px;
+}
+
+.dojo img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: bottom;
+}
+
+.dojo div {
+  box-sizing: border-box;
+}
+
+.dojo {
+  background-image: url(images/background_image.jpg);
+  background-repeat: repeat;
+  background-size:  2200px auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container_dojo{
+  width: 90%;
+  max-width: 720px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom:40px;
+}
+
+
+.content_dojo {
+  background-color: #ffffff;
+  width: 100%;
+  height: auto;
+  margin-top:90px;
+  padding: 5.5% 10%;
+  border-radius: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.description_dojo{
+    max-width: 432px;
+}
+.top_icon_dojo {
+  width: 20%;
+  height: auto;
+}
+.dojo_image{
+    margin-top:20px;
+}
+.oVice_image{
+    border-radius: 10px;
+}
+/* 600px以下のサイズの場合のレイアウト
+----------------------------------------------------*/
+@media (max-width: 600px) {
+
+ .dojo {
+    min-width: 375px;
+    height: auto;
+  }
+
+  .container_dojo{
+    width: 90%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5% 5%;
+  }
+
+  .content_dojo {
+    border-radius: 25px;
+    margin-top:20px;
+  }
+
+}
+/* ------dojo ここまで----- */
