--- a/static/style.css
+++ b/static/style.css
@@ -706,7 +706,7 @@ html { font-size:80%}
 .container_sns_fumoto{
   width: 100%;
   min-width: 375px;
-  height: 900px;
+  height: 650px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -770,10 +770,6 @@ html { font-size:80%}
    margin-bottom:15px;
 }
 
-.sns_box_fumoto {
-  margin-bottom: 120px;
-}
-
 .facebook_shinfumoto_fumoto{
   display: none;
 }
@@ -783,8 +779,8 @@ html { font-size:80%}
     display: none;
   }
 
-  .facebook_shinfumoto_fumoto {
-    /* width: 320px; */
+  .facebook_shinfumoto_fumoto{
+    width: 320px;
     display: initial;
   }
 }
